--- a/tic-tac-toe-game/src/index.css
+++ b/tic-tac-toe-game/src/index.css
@@ -7,10 +7,10 @@ body {
   margin: 20px;
   padding: 0;
 }
-#root {
+/* #root {
 margin-top: 20%;
 margin-left: 50%;
-}
+} */
 h1 {
   margin-top: 0;
   font-size: 22px;
